<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="submit">Submit</string>
    <string name="google_africa_developer_scholarship">Google Africa Developer Scholarship</string>
    <string name="go_back">Go back</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_adress">Email Adress</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="connection_failed">Connection Failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="learning_leaders">Learning Leaders</string>
</resources>