<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".ui.activity.SubmissionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:contentDescription="@string/google_africa_developer_scholarship"
            android:src="@drawable/gads"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sub_btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#fff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/shape_orange_divider"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/project_submission"
            android:textAlignment="center"
            android:textColor="#FFA726"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/sub_edt_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/shape_rounded_edt"
            android:hint="@string/first_name"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/sub_edt_mail"
            app:layout_constraintEnd_toStartOf="@id/sub_edt_last_name"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/guideline" />


        <EditText
            android:id="@+id/sub_edt_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_rounded_edt"
            android:hint="@string/last_name"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/sub_edt_first_name"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@id/sub_edt_first_name"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/sub_edt_first_name"


            />


        <EditText
            android:id="@+id/sub_edt_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/shape_rounded_edt"
            android:hint="@string/email_adress"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/sub_edt_git"
            app:layout_constraintEnd_toEndOf="@id/sub_edt_last_name"
            app:layout_constraintStart_toStartOf="@id/sub_edt_first_name"

            app:layout_constraintTop_toBottomOf="@id/sub_edt_first_name" />


        <EditText
            android:id="@+id/sub_edt_git"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/shape_rounded_edt"
            android:hint="@string/project_on_github_link"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/sub_btn_submit"
            app:layout_constraintEnd_toEndOf="@id/sub_edt_last_name"
            app:layout_constraintStart_toStartOf="@id/sub_edt_first_name"

            app:layout_constraintTop_toBottomOf="@id/sub_edt_mail" />


        <Button
            android:id="@+id/sub_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"

            android:layout_marginBottom="40dp"
            android:background="@drawable/shape_orange_submit_btn"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_edt_git"

            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="120dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
