<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".ui.activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/main_btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="12dp"

                android:background="@drawable/shape_submit_btn"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="#fff"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learning_leaders" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_iq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_iq_leaders" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/main_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_tabs"

        />
</androidx.constraintlayout.widget.ConstraintLayout>